[metadata]
name = mona_sdk
version = 0.0.1
author = MonaLabs
author_email = sdk@monalabs.io
description = SDK for communicating with Mona
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src